<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    >

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

            <LinearLayout
                android:id="@+id/firstcontainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/message"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/phone_number_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="phone"
                android:hint="@string/enter_phone_hint" />
            <Button
                android:id="@+id/start_auth_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/start_phone_auth"
                android:textColor="#fff" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/secondcontainer"
               android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_verify_code_header"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wrong_number"
                    android:textAlignment="center"
                    android:textColor="#668bb4"/>
            <EditText
                android:id="@+id/sms_code_edt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:maxLength="6"
                android:textColorLink="@color/colorPrimaryDark"
                android:hint="@string/enter_verify_code" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/enter_verify_code_txt"
                 android:textAlignment="center"/>

            <TextView
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_sms_black_24dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:foreground="?attr/selectableItemBackground"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_verify_ressent_code"
                />
                <View
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="#939191" />

                <TextView
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/ic_call_black_24dp"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:gravity="center_vertical"
                    android:drawablePadding="10dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_verify_call_developper"
                    />



            <Button

                android:id="@+id/verify_auth_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/verify_phone_auth"
                android:textColor="#fff" />
            </LinearLayout>

        </LinearLayout>




</ScrollView>